[AspectRatio] Fix replaced-element-034.html https://bugs.webkit.org/show_bug.cgi?id=228223

Patch by Rob Buis <rbuis@igalia.com> on 2021-07-30
Reviewed by Manuel Rego Casasnovas.

Source/WebCore:

Fix replaced-element-034.html by making hasReplacedLogicalHeight
return false for *-content when aspect-ratio is provided and relying
on computeReplacedLogicalHeight to take aspect-ratio into account.

* rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::hasReplacedLogicalHeight const):

LayoutTests:

* TestExpectations:

Canonical link: https://commits.webkit.org/240106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280471 268f45cc-cd09-0410-ab3c-d52691b4dbfc